--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "8.7.0"
@@ -14,6 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "npm": "^5.7.1",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "expect": "^22.4.0",
+    "mocha": "^5.0.4",
+    "nodemon": "^1.17.1"
   }
 }
